--- a/app/styleguides/_global/grid.css
+++ b/app/styleguides/_global/grid.css
@@ -14,7 +14,7 @@
 
 .layout__content {
   margin: 0 auto;
-  padding: em(30);
+  padding: 0 em(30);
   $contentPadding: em(60);
   .content__main,
   .content__secondary {
